--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,11 @@
-<<<<<<< HEAD
-=======
+
 <?xml version="1.0" encoding="UTF-8"?>
 
->>>>>>> origin/main
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-<<<<<<< HEAD
   <groupId>com.app.demo</groupId>
   <artifactId>samplejava</artifactId>
   <version>0.0.1-SNAPSHOT</version>
@@ -28,8 +26,8 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-=======
-  <groupId>kmit</groupId>
+
+  <groupId>com.app.demo</groupId>
   <artifactId>mavenproject</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
@@ -74,5 +72,5 @@
     </plugins>
   </build>
 
->>>>>>> origin/main
+
 </project>
